<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cs528_mateus.uvprotector.TabFragment2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp">

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trackingToggleButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false"
                android:textOn="@string/trackingToggle"
                android:textOff="@string/trackingToggle"
                android:layout_marginLeft="10dp"
                android:checked="false"
                android:layout_weight="0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="@string/ioIndicator"
                android:id="@+id/ioIndicatorTextView"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/trackingToggleButton"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:id="@+id/ioTextView"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/trackingToggleButton"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Date"
                android:id="@+id/textView4"
                android:textAlignment="center"
                android:layout_gravity="center" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:id="@+id/tableLayout">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/timeTableTitle"
                    android:id="@+id/uvTextView"
                    android:layout_weight="1"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/uvIndexTableTitle"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/exposureTimeTableTitle"
                    android:id="@+id/textView2"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:textAlignment="center" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>